--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,6 +39,7 @@ subjects:
 - !lcsh 'Missions -- Philippines'
 - !lcsh 'Philippines -- History -- Sources'
 - !lcc 'DS'
+- GITenberg
 title: "The Philippine Islands, 1493-1898, Volume 29 of 55, 1638–40\r\nExplorations\
   \ by Early Navigators, Descriptions of the Islands and Their Peoples, Their History\
   \ and Records of the Catholic Missions, as Related in Contemporaneous Books and\
